# BCScanner

./: CMakeLists.txt
.github/workflows/: release.yml
